apps/homepage/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  namespace: homepage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homepage
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: homepage
    spec:
      serviceAccountName: homepage
      containers:
        - name: homepage
          image: ghcr.io/gethomepage/homepage:v2.5.0
          securityContext:
            allowPrivilegeEscalation: false
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 10m
              memory: 128Mi
            limits:
              memory: 192Mi
          volumeMounts:
            - name: config-dir
              mountPath: /app/config
            - name: config-settings
              mountPath: /app/config/settings.yaml
              subPath: settings.yaml
            - name: config-widgets
              mountPath: /app/config/widgets.yaml
              subPath: widgets.yaml
            - name: config-services
              mountPath: /app/config/services.yaml
              subPath: services.yaml
            - name: config-bookmarks
              mountPath: /app/config/bookmarks.yaml
              subPath: bookmarks.yaml
            - name: config-kubernetes
              mountPath: /app/config/kubernetes.yaml
              subPath: kubernetes.yaml
      volumes:
        - name: config-dir
          emptyDir: {}
        - name: config-settings
          configMap:
            name: homepage-config
        - name: config-widgets
          configMap:
            name: homepage-config
        - name: config-services
          configMap:
            name: homepage-config
        - name: config-bookmarks
          configMap:
            name: homepage-config
        - name: config-kubernetes
          configMap:
            name: homepage-config
